<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewName"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_weight="1"/>

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/imageButton" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/spotify_page"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/webpage"
            android:textColor="@color/blue"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/genre_label"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/genre"
            android:textColor="@color/blue"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/popularity"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/popularity"
            android:textColor="@color/blue"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/spotify_followers"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/followers"
            android:textColor="@color/blue"/>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:id="@+id/topSongsButton"
            android:background="@drawable/buttonshape"
            android:layout_marginRight="10dp"
            android:text="@string/top_5_songs_label"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:id="@+id/similarMusiciansButton"
            android:background="@drawable/buttonshape"
            android:layout_marginRight="10dp"
            android:text="@string/similar_musicians_label"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:id="@+id/albumsButton"
            android:background="@drawable/buttonshape"
            android:text="@string/albums_button_text"/>

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/songs_similar_musicians_frame"></FrameLayout>

</LinearLayout>